# cxl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
example/: cexpr_use.cpp  csv_parser_generator.cpp  variant_use.cpp
example/csv/: grammar.h  main.cpp
example/tests/: cparse.cpp
examples/component/: main.cpp
examples/csv/: generators.h  grammar.h  main.cpp
examples/fake_class/: main.cpp
examples/integrals/: main.cpp
examples/string_manip/: main.cpp
examples/struct_manip/: main.cpp
include/: callstack.hpp  cexpr.hpp  cindex.hpp  cintegral.hpp  citerator.hpp  cparse.hpp  crtp.hpp  cstring.hpp  cstring_operators.hpp  ctuple.hpp  mempool(incomplete).hpp  pp.hpp  stack_variant.hpp  typelist.hpp  utility.hpp  variant.hpp
include/cxl/: aggregate.generated.0.h  aggregate.generated.1.h  aggregate.hpp  integral.hpp  iterator.hpp  lambda.hpp  parse.hpp  parsed.hpp  parsers.hpp  string.hpp  tuple.hpp  typelist.hpp  utility.hpp
src/: callstack_use.cpp  cexpr_use.cpp  variant_use.cpp
src/tests/: callstack.cpp  cintegral.cpp  citerator.cpp  cparse.cpp
tests/: cintegral.cpp  citerator.cpp
tools/: CMakeLists.txt  srcgen_cxl_aggregate.cpp
tools/code-generators/: aggregate.generator.cpp
